--- a/live-ingester/src/integration-test/resources/rest/hxinsight/requests/ancestors/create-request-with-ancestors.yml
+++ b/live-ingester/src/integration-test/resources/rest/hxinsight/requests/ancestors/create-request-with-ancestors.yml
@@ -43,10 +43,6 @@ body: [
         "value": "admin",
         "annotation": "createdBy"
       },
-      "ALLOW_ACCESS": {
-        "type": "string",
-        "value": [ "GROUP_EVERYONE" ]
-      },
       "cm:name": {
         "value": "purchase-order-scan.pdf",
         "annotation": "name"
@@ -74,7 +70,7 @@ body: [
           }
         }
       },
-      "permissions" : {
+      "PERMISSIONS" : {
         "value" : {
           "read" : [ {
             "id" : "GROUP_EVERYONE",
