--- a/live-ingester/src/integration-test/resources/rest/hxinsight/requests/create-thumbnail.yml
+++ b/live-ingester/src/integration-test/resources/rest/hxinsight/requests/create-thumbnail.yml
@@ -14,9 +14,6 @@ body: [
       "modifiedAt": {
         "value": "2025-03-27T11:27:59.232Z",
         "annotation": "dateModified"
-      },"ALLOW_ACCESS": {
-        "value": [ "GROUP_EVERYONE","GROUP_site_swsdp_SiteContributor","GROUP_site_swsdp_SiteCollaborator","GROUP_site_swsdp_SiteManager","GROUP_site_swsdp_SiteConsumer" ],
-        "type": "string"
       },
       "aspectsNames": {
         "value": [ "rn:hiddenRendition","cm:indexControl","cm:auditable","rn:rendition2" ],
@@ -82,7 +79,7 @@ body: [
           }
         }
       },
-      "permissions": {
+      "PERMISSIONS": {
         "value": {
           "read": [ {
             "id": "GROUP_EVERYONE",
