CIN-8974 Remove environment_authorization from default scope for JAMP.
This was temporarily needed, but now has to be removed again.

--- a/hxinsight-extension/src/main/resources/alfresco/module/alfresco-hxinsight-connector-hxinsight-extension/alfresco-global.properties
+++ b/hxinsight-extension/src/main/resources/alfresco/module/alfresco-hxinsight-connector-hxinsight-extension/alfresco-global.properties
@@ -11,7 +11,7 @@ hxi.auth.providers.hyland-experience.grant-type=client_credentials
 hxi.auth.providers.hyland-experience.client-name=acs-insight-connector
 hxi.auth.providers.hyland-experience.client-id=
 hxi.auth.providers.hyland-experience.client-secret=
-hxi.auth.providers.hyland-experience.scope=hxp.integrations hxp environment_authorization iam.jti-capture
+hxi.auth.providers.hyland-experience.scope=hxp.integrations hxp iam.jti-capture
 hxi.auth.providers.hyland-experience.token-uri=http://localhost:8001/token
 hxi.auth.providers.hyland-experience.environment-key=hxi-env-key
 hxi.auth.retry.attempts=3
