PR Review changes and made the timeout behavior global

--- a/nucleus-sync/src/integration-test/resources/application-test.yml
+++ b/nucleus-sync/src/integration-test/resources/application-test.yml
@@ -1,6 +1,8 @@
 alfresco:
   base-url: test-alfresco-base-url
   page-size: 100
+  user-group:
+    fetch-timeout: PT5M
 
 nucleus:
   idp-base-url: test-nucleus-idp-base-url
