--- a/nucleus-sync/src/main/resources/application.yml
+++ b/nucleus-sync/src/main/resources/application.yml
@@ -32,6 +32,7 @@ auth:
 alfresco:
   base-url: ${ALFRESCO_BASE_URL}
   page-size: 100
+  sync-batch-size: 1000
   user-group:
     fetch-timeout: PT5M
 
