--- a/nucleus-sync/src/main/resources/application.yml
+++ b/nucleus-sync/src/main/resources/application.yml
@@ -31,7 +31,6 @@ auth:
         - system-integrations-config
         - system-integrations-runtime
         - environment_authorization
-      environment-key: ${HX_ENV_KEY}
 
 alfresco:
   base-url: ${ALFRESCO_BASE_URL}
@@ -45,7 +44,7 @@ nucleus:
   base-url: ${NUCLEUS_BASE_URL}
   system-id: ${NUCLEUS_SYSTEM_ID}
   page-size: 1000
-  delete-group-member-batch-size: ${DELETE_BATCH_SIZE}
+  delete-group-member-batch-size: ${DELETE_BATCH_SIZE:100}
 
 logging:
   level:
