Feature/cin 10260 user grp alpha (#1264)

--- a/nucleus-sync/src/main/resources/application.yml
+++ b/nucleus-sync/src/main/resources/application.yml
@@ -1,6 +1,10 @@
 server:
   port: ${SERVER_PORT:8081}
 
+sync:
+  enabled: ${SYNC_ENABLED:true}
+  cron.expression: ${SYNC_CRON_EXPRESSION:"0 0 * * *"}
+
 http-client:
   timeout-minutes: ${HTTP_CLIENT_TIMEOUT_MINUTES:5}
   retry:
@@ -22,16 +26,14 @@ auth:
       token-uri: ${HX_TOKEN_URI}
       grant-type: client_credentials
       scope:
-        - hxp.integrations
         - iam.user-data.account
         - system-integrations-config
         - system-integrations-runtime
         - environment_authorization
-      environment-key: ${HX_ENV_KEY}
 
 alfresco:
   base-url: ${ALFRESCO_BASE_URL}
-  page-size: 100
+  page-size: 1000
   sync-batch-size: 1000
   user-group:
     fetch-timeout: PT5M
@@ -40,7 +42,8 @@ nucleus:
   idp-base-url: ${NUCLEUS_IDP_BASE_URL}
   base-url: ${NUCLEUS_BASE_URL}
   system-id: ${NUCLEUS_SYSTEM_ID}
-  delete-group-member-batch-size: ${DELETE_BATCH_SIZE}
+  page-size: 1000
+  delete-group-member-batch-size: ${DELETE_BATCH_SIZE:100}
 
 logging:
   level:
